05_kubernetes/03_Session3_Application_Deployment/015-assembling-a-real-application/manifests/02-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: lab015
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: k8s-lab-web:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
