05_kubernetes/03_Session3_Application_Deployment/015-assembling-a-real-application/manifests/04-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: lab015
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: k8s-lab-api:v1
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8000
