05_kubernetes/03_Session3_Application_Deployment/015-assembling-a-real-application/manifests/03-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: lab015
spec:
  selector:
    app: web # ตาม Pod web แม้ชื่อและ IP เปลี่ยน
  ports:
    - port: 3000
      targetPort: http
