05_kubernetes/03_Session3_Application_Deployment/015-assembling-a-real-application/manifests/05-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: lab015
spec:
  selector:
    app: api # web เรียกชื่อ api แทน Pod IP
  ports:
    - port: 8000
      targetPort: http
