05_kubernetes/03_Session3_Application_Deployment/015-assembling-a-real-application/manifests/06-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: lab015
spec:
  ingressClassName: nginx
  rules:
    - http: # ประตูเดียวจากภายนอก ไม่ผูก host
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 3000
